--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 .c9
 config/default.json
-node_modules/
+
+.DS_Store
+
+# Logs
+logs
+*.log
+
+# Dependency directories
+node_modules
+bower_components
+
+# Build files
+build
+
+#webstorm
+.idea
