--- a/package.json
+++ b/package.json
@@ -1,20 +1,88 @@
 {
   "name": "codeit",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "author": "Alex Subota <as.subota@gmail.com>",
+  "description": "",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "cross-env NODE_ENV=development gulp dev",
+    "build": "cross-env NODE_ENV=production gulp build",
+    "deploy": "cross-env NODE_ENV=production gulp deploy"
+  },
+  "buildConfig": {
+    "OUTPUT_DIR": "build",
+    "SOURCE_DIR": "frontend",
+    "DEPLOY_DIR": "public",
+    "ENTRY_POINT": "app.js"
+  },
+  "eslintConfig": {
+    "extends": "airbnb-base"
   },
   "dependencies": {
+    "angular": "^1.5.0",
+    "angular-ui-router": "^0.3.1",
+    "babel-core": "^6.3.26",
+    "babel-eslint": "^7.0.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.5.2",
+    "babelify": "^7.2.0",
     "body-parser": "~1.15.1",
+    "brfs": "^1.2.0",
+    "browser-sync": "^2.7.6",
+    "browserify": "^13.0.0",
+    "browserify-ngannotate": "^2.0.0",
+    "bulk-require": "^1.0.0",
+    "bulkify": "^1.1.1",
     "cookie-parser": "~1.4.3",
+    "cross-env": "^3.1.1",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
+    "envify": "^3.4.0",
     "express": "~4.13.4",
     "express-form2": "^1.5.0",
+    "gulp": "^3.9.0",
+    "gulp-angular-templatecache": "^2.0.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-changed": "^1.0.0",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-eslint": "^3.0.1",
+    "gulp-gzip": "^1.2.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-notify": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-protractor": "^3.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sass-glob": "^1.0.6",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.1",
+    "html-browserify": "0.0.6",
+    "imagemin-pngcrush": "^5.0.0",
     "mongoose": "^4.5.8",
     "mongoose-unique-validator": "^1.0.2",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "uglifyify": "^3.0.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
+  },
+  "devDependencies": {
+    "del": "^2.1.0",
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb-base": "9.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "express": "^4.13.3",
+    "istanbul": "^0.3.22",
+    "merge-stream": "^1.0.0",
+    "pretty-hrtime": "^1.0.1",
+    "run-sequence": "^1.1.5",
+    "tiny-lr": "^0.2.1"
   }
 }
